--- a/expressJS/nodekb/views/index.pug
+++ b/expressJS/nodekb/views/index.pug
@@ -1,6 +1,7 @@
-doctype html
-html
-    head
-        title Knowledgebase
-    body
-        h1 #{title}
+extends layout
+
+block content
+    h1 #{title}
+    ul
+        each article, i in articles
+            li= article.title
