--- a/expressJS/nodekb/views/edit_article.pug
+++ b/expressJS/nodekb/views/edit_article.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
     h1 #{title}
-    form(method='POST', action='/articles/add/edit/'+article._id)
+    form(method='POST', action='/articles/edit/'+article._id)
         #form-group
             label Title:
             input.form-control(name='title', type='text', value=article.title)
