--- a/expressJS/nodekb/views/layout.pug
+++ b/expressJS/nodekb/views/layout.pug
@@ -3,6 +3,7 @@ html
     head
         title Knowledgebase
         link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
+        link(rel='stylesheet' href='/css/style.css')
     body
         nav.navbar.navbar-expand-md.navbar-dark.bg-dark
                 a.navbar-brand(href='/') Knowledgebase
@@ -35,3 +36,4 @@ html
              p Copyright &copy; 2020
          script(src='/bower_components/jquery/dist/jquery.js')
          script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
+         script(src='/js/main.js')
