--- a/expressJS/nodekb/views/layout.pug
+++ b/expressJS/nodekb/views/layout.pug
@@ -30,6 +30,9 @@ html
                         button.btn.btn-secondary.my-2.my-sm-0(type='submit') Search
         .container
          != messages('message', locals)
+         if errors
+                          each error, i in errors
+                              div(class="alert alert-danger") #{error.msg}
          block content
          br
          hr
