--- a/expressJS/nodekb/views/login.pug
+++ b/expressJS/nodekb/views/login.pug
@@ -11,3 +11,5 @@ block content
             input.form-control(name='password',type='password')
         br
         input.btn.btn-primary(type='submit',value='Submit')
+        //br
+        //a(href='mailto: nsxbusiness@gmail.com') If you forgot your password or you need assistance, please email us here!
